--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+html{
+  height: 100%;
+  margin: 0;
+}
 body {
+  background-image: url('./music-wallpaper.jpg');
+  background-repeat: repeat;
+  background-size: cover;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +17,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card {
+  background-color: rgba(0, 0, 0, 0.685) !important;
 }
